[package]
name = "sampling2api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
http = "1.4.0"
rmcp = { version = "1.3.0", features = ["client", "transport-io", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json", "stream"] }
