[package]
name = "sampling2api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["mirrorange"]
description = "Expose MCP client sampling as an Anthropic-compatible Messages API"
readme = "README.md"
repository = "https://github.com/mirrorange/sampling2api"
homepage = "https://github.com/mirrorange/sampling2api"
license = "MIT"
keywords = ["mcp", "anthropic", "sampling", "api", "bridge"]
categories = ["command-line-utilities", "web-programming::http-server"]
exclude = [".vscode/", "AGENTS.md", "docs/", "target/"]

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
http = "1.4.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rmcp = { version = "1.3.0", features = ["client", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
